# Icon-Requests

./: .editorconfig  .gitignore  .travis  .travis.yml  Dockerfile  README.md  application.py  icon-requests.in  meson.build  meson_post_install.py  meson_post_install.sh  numix-icon-report.in  numix-icon-report.py  tags  update_pot.sh  utils.py
IconReport/: application.py  utils.py
IconReport/widgets/: application_row.py  applications_list.py  headerbar.py  window.py
IconRequests/: __init__.py  application.py  const.py  utils.py
IconRequests/controller/: applications.py
IconRequests/modules/: __init__.py  desktop.py  log.py  repos.py  settings.py  theme.py
IconRequests/modules/upload/: __init__.py  imgur.py  upload.py
IconRequests/widgets/: __init__.py  about.py  application_row.py  applications_list.py  headerbar.py  icon_choser.py  loading.py  notification.py  search_bar.py  window.py
IconRequests/widgets/applications/: __init__.py  list.py  row.py
data/: about.ui  com.github.bilelmoussaoui.IconRequests.appdata.xml.in  com.github.bilelmoussaoui.IconRequests.desktop.in  com.github.bilelmoussaoui.IconRequests.gresource.xml  com.github.bilelmoussaoui.IconRequests.gschema.xml  hardcode-fixer-issue.model  icon-requests.appdata.xml.in  icon-requests.desktop.in  icon-requests.gresource.xml  issue.model  mainwindow.ui  meson.build  numix-icon-report.appdata.xml.in  numix-icon-report.desktop.in  numix-icon-report.gresource.xml  org.Numix.IconReport.gschema.xml  org.gnome.IconRequests.gschema.xml  repos.json  shortcuts.ui  style.css
data/css/: style.css
data/icons/: meson.build
data/ui/: about.ui  mainwindow.ui
po/: icon-requests.pot  meson.build
widgets/: application_row.py  applications_list.py  headerbar.py  search_bar.py  window.py
